fix: Fix the issue where the output name is too long and the input box is stretched

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
@@ -30,6 +30,12 @@
         > .@{prefix}-param-input-select,
         > .@{mui-prefix}FormControl-root {
             flex: 1;
+            max-width: calc(100% / 2);
+
+            .@{mui-prefix}InputBase-root {
+                padding-right: @padding-xxs;
+                padding-left: @padding-xxs;
+            }
         }
 
         .btn-delete {
